courses page UI and alignment issue fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,5 +48,13 @@ input::-webkit-inner-spin-button {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: GeistSans, GeistMono, sans-serif;
+  font-family: GeistSans, GeistMono, sans-serif
+}
+
+.text-gradient {
+  background: linear-gradient(90deg, #036cff 2.34%, #3700ff 100.78%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
 }
